--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
 apply plugin: 'kotlin-kapt'
 dependencies {
     implementation 'androidx.room:room-runtime:2.4.3'
+    implementation 'com.google.android.gms:play-services-cast-framework:21.0.1'
     kapt 'androidx.room:room-compiler:2.4.3'
     implementation 'androidx.room:room-ktx:2.4.3'
 
@@ -54,4 +55,12 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     // Skip this if you don't want to use integration libraries or configure Glide.
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation 'com.github.Drjacky:ImagePicker:2.3.19'
+
+
+
+
+
 }
